--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1152,7 +1152,7 @@
 
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/playBtn"
+                        android:id="@+id/addFriendBtn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="0dp"
