--- a/app/src/main/res/drawable/layout_custom.xml
+++ b/app/src/main/res/drawable/layout_custom.xml
@@ -23,21 +23,21 @@
     </item>
     <item>
         <shape>
-            <padding  android:right="1dp" android:left="1dp" />
+            <padding  android:right="1dp" android:left="1dp" android:bottom="1dp" />
             <stroke android:color="#20000000" android:width="1dp" />
             <corners android:radius="14dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <padding android:right="1dp"  android:left="1dp" />
+            <padding android:right="1dp"  android:left="1dp" android:bottom="1dp" />
             <stroke android:color="#25000000" android:width="1dp" />
             <corners android:radius="13dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <padding android:right="1dp" android:left="1dp" />
+            <padding android:right="1dp" android:left="1dp"  android:bottom="1dp"/>
             <stroke android:color="#30000000" android:width="1dp" />
             <corners android:radius="12dp" />
         </shape>
