--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -221,7 +221,8 @@
                     android:paddingLeft="10.5dp"
                     android:paddingRight="10.5dp"
                     android:paddingTop="7.5dp"
-                    android:paddingBottom="7.5dp">
+                    android:paddingBottom="7.5dp"
+                    android:layout_marginBottom="3dp">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="40dp"
@@ -253,7 +254,7 @@
                         android:layout_marginRight="-1dp"
                         android:background="@drawable/btn"
                         android:fontFamily="@font/inter_semibold"
-                        android:text="@string/nikname"
+                        android:text="@string/nikname1"
                         android:textAllCaps="false"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -281,7 +282,6 @@
                         android:paddingTop="15dp"
                         android:paddingBottom="15dp"
                         android:src="@drawable/settings_icon"
-                        android:onClick="showSettingsMenu"
                         />
 
                 </LinearLayout>
