--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PasswordChange">
+    tools:context=".activities.PasswordChange">
     <LinearLayout
         android:layout_width="376dp"
         android:layout_height="wrap_content"
