реализована авторизация, регистрация, восстановление пароля

--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -45,6 +45,27 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/goBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="@drawable/other_btn"
+                    android:drawableLeft="@drawable/baack_icon"
+                    android:drawablePadding="20dp"
+                    android:fontFamily="@font/inter_semibold"
+                    android:gravity=""
+                    android:paddingLeft="20dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/back_to_authorize"
+                    android:textAllCaps="false"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:visibility="visible"/>
+
                 <LinearLayout
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
@@ -73,7 +94,7 @@
                         android:background="@color/stroke" />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName"
+                        android:id="@+id/editTextPersonName"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="0"
