--- a/app/src/main/res/layout/activity_control_question.xml
+++ b/app/src/main/res/layout/activity_control_question.xml
@@ -72,7 +72,7 @@
                         android:background="@color/stroke" />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName"
+                        android:id="@+id/question"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="0"
