--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -67,7 +67,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/forgotPassword"
+                    android:id="@+id/nick"
                     android:layout_width="130.5dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
@@ -80,7 +80,7 @@
                     android:textSize="15sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/registerButton"
+                    android:id="@+id/score"
                     android:layout_width="93dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
