Добавлены все ручки кроме игрового процесса, не работает динамическое отображение друзей и уведомлений

--- a/app/src/main/res/layout/activity_control_question.xml
+++ b/app/src/main/res/layout/activity_control_question.xml
@@ -67,7 +67,7 @@
                     android:drawableLeft="@drawable/baack_icon"
                     android:drawablePadding="20dp"
                     android:fontFamily="@font/inter_semibold"
-                    android:gravity=""
+                    android:gravity="center_vertical"
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
                     android:paddingRight="10dp"
