--- a/app/src/main/res/layout/activity_register_window.xml
+++ b/app/src/main/res/layout/activity_register_window.xml
@@ -64,6 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
                     android:layout_marginBottom="0dp"
+                    android:gravity="center_vertical"
                     android:background="@drawable/first_btn"
                     android:drawableLeft="@drawable/baack_icon"
                     android:drawablePadding="20dp"
